# routes.js
@@ -2,8 +2,10 @@ const { Router } = require('express');
 const usersController = require('./src/controllers/users-controller');
 const matchesController = require('./src/controllers/matches-controller');
 const predictionsController = require('./src/controllers/predictions-controller');
+const leaderboardController = require('./src/controllers/leaderboard-controller');
 const router = Router();
 router.use('/users', usersController);
 router.use('/predictions', predictionsController);
 router.use('/matches', matchesController);
+router.use('/leaderboard', leaderboardController);
 module.exports = router;
