# src/swagger.yaml
@@ -275,7 +275,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Match'
+  /leaderboard:
+    get:
+      security:
+        - bearerAuth: []
+      summary: Retrieve leaderboard
+      description: Retrieve a leaderboard showing users with the highest success rates.
+      tags:
+        - Leaderboard
 
+      responses:
+        '200':
+          description: A list of users with the highest success rates.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      description: The ID of the user.
+                    username:
+                      type: string
+                      description: The username of the user.
+                    successRate:
+                      type: number
+                      format: float
+                      description: The success rate of the user.
+        '500':
+          description: Internal server error.
 components:
   securitySchemes:
     bearerAuth:
